ask more and check

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
     <script language="javascript">
     var name = window.prompt("What is your name?");
-    window.alert("you name is" + name)</script>
+    window.alert("you name is" + name);
+    var quest = window.prompt("What is your quest?")
+    if (quest == "to seek for the holy grail"){
+      window.alert("Good")
+    }
+    else {
+      window.alert("Arrgh")
+    }
+    </script>
+
 </body>
 </html>
